Fix Sidebar overlapping modal background

--- a/app/assets/stylesheets/sidebar.scss
+++ b/app/assets/stylesheets/sidebar.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   width: 72px;
   position: fixed;
-  z-index: 99;
+  z-index: 9;
   background-color: white;
   height: 100%;
   overflow: hidden;
